--- a/sample.bib
+++ b/sample.bib
@@ -1,9 +1,63 @@
-@article{lees2010theoretical,
-  title={Theoretical maximum capacity as benchmark for empty vehicle redistribution in personal rapid transit},
-  author={Lees-Miller, John and Hammersley, John and Wilson, R},
-  journal={Transportation Research Record: Journal of the Transportation Research Board},
-  number={2146},
-  pages={76--83},
-  year={2010},
-  publisher={Transportation Research Board of the National Academies}
+
+@misc{ref:fnal-esh-design-standards,
+  title={ESH DocDB Document 2781-v8 Electrical Design Standards for Electronics to be used in Experimental Apparatus at Fermilab},
+ howpublished={\url{https://esh-docdb.fnal.gov/cgi-bin/sso/ShowDocument?docid=2781}},
+  year={2020},
+ author={FNAL}
+}
+
+@misc{ref:cern-mmc,
+  title={MMC project collaboration workspace},
+ howpublished={\url{https://espace.cern.ch/ph-dep-ESE-BE-uTCAEvaluationProject/MMC_project/default.aspx}},
+  year={2017},
+ author={CERN}
+}
+
+@misc{ref:afc,
+  title={AMC FMC Carrier (AFC)},
+ howpublished={\url{https://ohwr.org/project/afc}},
+  year={2023},
+  author={OHWR}
+}
+
+@misc{ref:amc,
+ title={Advanced Mezzanine Card Base Specification AMC.0 R2.0},
+ howpublished={\url{https://www.picmg.org/advanced-mezzanine-card-base-specification-amc-0-r2-0/}},
+ year={2010},
+author = {PIGMG}
+}
+
+@misc{ref:fmc,
+  title={ANSI/VITA 57.1-2019 and 57.4-2018, FPGA Mezzanine Card (FMC) Standard},
+ howpublished={\url{https://www.vita.com/fmc}},
+ author={VITA},
+  year={2019}
+}
+
+@misc{ref:dts-sedr-overview,
+    title= {Overview of the DUNE Timing System (DTS) Safety Engineering Design Review (SEDR) Documentation},
+ howpublished={\url{https://edms.cern.ch/document/3057172/1}},
+  year={2024},
+  author={David Cussans}
+}
+
+@misc{ref:dune-utca-electrical-safety,
+    title = {EDMS 3064098: DUNE FD2 uTCA crate, power supply and MCH module},
+howpublished ={\url{https://edms.cern.ch/document/3064098}},
+    year={2024},
+    author={Theresa Shaw, Linda Bagby, James Devine}
+}
+
+@misc{ref:opc_ua,
+    title = {IEC62541, OPC Unified Architecture},
+    howpublished = {\url{https://opcfoundation.org/about/opc-technologies/opc-ua/}},
+    author = {OPC Foundation},
+    year = 2008
+}
+
+@misc{ref:irig,
+    title = {IRIG Timecode, document 200-16},
+    howpublished = {\url{http://www.irig106.org/docs/rcc/200-16_IRIG_Serial_Time_Code_Formats.pdf}},
+    author = {Inter-range instrumentation group},
+    year = 2016
 }
